# reversi

./: CNAME  Cargo.toml  index.html  reversi.html  reversi.js
pkg/: package.json  reversi.d.ts  reversi.js  reversi_bg.wasm  reversi_bg.wasm.d.ts  reversi_wasm.d.ts  reversi_wasm.js  reversi_wasm_bg.wasm  reversi_wasm_bg.wasm.d.ts
src/: bitboard.rs  board.rs  lib.rs  mcts.rs  minmax.rs  negascout.rs
