[package]
name = "reversi"
version = "0.1.0"
authors = ["Tlapesium <tahuna.sakana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.70"
js-sys = "0.3.47"
rand = { version = "0.6.1", features = ["wasm-bindgen"] }
console_error_panic_hook = "0.1.6"
